<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorAccent"
    tools:context=".SetTimeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblCookTime"
        android:text="@string/lblCookTime"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:padding="20dp"
        android:id="@+id/lblCookSetTime"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTimePicker"
        android:text="@string/btnTimePicker"
        android:textSize="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
    >
        <Button
            android:id="@+id/btnOkTime"
            android:textSize="30sp"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ok"
            android:onClick="startService"
            />
        <Button
            android:id="@+id/btnCancelTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30sp"
            android:padding="20dp"
            android:text="@string/cancel">

        </Button>
    </LinearLayout>
</LinearLayout>